--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-zod-api": "^25.5.3",
     "http-errors": "^2.0.0",
@@ -21,6 +23,7 @@
     "@types/http-errors": "^2.0.5",
     "@types/node": "^24.9.1",
     "@types/swagger-ui-express": "^4.1.8",
+    "prisma": "^6.18.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
