--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,14 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": ".",  // Add this!
+    "paths": {
+      "$lib/*": ["./lib/*"],
+      "$lib": ["./lib"],
+      "$modules/*": ["./modules/*"],
+      "$modules": ["./modules"]
+    }
   },
   "include": ["src"]
 }
