--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "tsx src/index.ts",
     "dev": "tsx --watch src/index.ts",
     "build:docs": "tsx src/docs/generate-documentation.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "import:csv": "node import-csv.js"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
