--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -275,7 +275,7 @@ paths:
         '500':
           $ref: '#/components/responses/InternalError'
 
-    put:
+    patch:
       tags:
         - Recettes
       summary: Modifier une recette
