--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "meal-prep",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "tsx src/index.ts",
-    "dev": "tsx --watch src/index.ts",
-    "build:docs": "tsx src/docs/generate-documentation.ts",
-    "build": "tsc",
-    "import:csv": "node import-csv.js"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.18.0",
-    "dotenv": "^17.2.3",
-    "express": "^5.1.0",
-    "express-zod-api": "^25.5.3",
-    "http-errors": "^2.0.0",
-    "swagger-ui-express": "^5.0.1",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.5",
-    "@types/http-errors": "^2.0.5",
-    "@types/node": "^24.9.1",
-    "@types/swagger-ui-express": "^4.1.8",
-    "prisma": "^6.18.0",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3"
-  },
-  "private": true
+	"name": "meal-prep",
+	"version": "1.0.0",
+	"description": "",
+	"main": "dist/index.js",
+	"prisma": {
+		"seed": "tsx prisma/seed.ts"
+	},
+	"scripts": {
+		"start": "tsx src/index.ts",
+		"dev": "tsx --watch src/index.ts",
+		"build:docs": "tsx src/docs/generate-documentation.ts",
+		"build": "tsc",
+		"import:csv": "node import-csv.js",
+		"db:seed": "prisma db seed",
+		"db:reset": "prisma migrate reset --force"
+	},
+	"dependencies": {
+		"@prisma/client": "^6.18.0",
+		"dotenv": "^17.2.3",
+		"express": "^5.1.0",
+		"express-zod-api": "^25.5.3",
+		"http-errors": "^2.0.0",
+		"swagger-ui-express": "^5.0.1",
+		"zod": "^4.1.12"
+	},
+	"devDependencies": {
+		"@types/express": "^5.0.5",
+		"@types/http-errors": "^2.0.5",
+		"@types/node": "^24.9.1",
+		"@types/swagger-ui-express": "^4.1.8",
+		"prisma": "^6.18.0",
+		"tsx": "^4.20.6",
+		"typescript": "^5.9.3"
+	},
+	"private": true
 }
