--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
 		"db:reset": "prisma migrate reset --force"
 	},
 	"dependencies": {
+		"@openrouter/ai-sdk-provider": "^1.2.3",
 		"@prisma/client": "^6.18.0",
+		"ai": "^5.0.93",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
 		"express-zod-api": "^25.5.3",
