--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -106,7 +106,7 @@ paths:
       summary: Récupérer les menus
       operationId: listMenus
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: limit
           in: query
@@ -138,7 +138,7 @@ paths:
       summary: Sauvegarder/Créer un menu
       operationId: createMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       requestBody:
         required: true
         content:
@@ -174,7 +174,7 @@ paths:
       description: Génère un menu (plusieurs repas sur plusieurs jours) avec critères nutritionnels Min/Max
       operationId: generateMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: duration
           description: Nombre de jours sur lesquels s'étale le menu
@@ -242,7 +242,7 @@ paths:
       summary: Détails d'un menu
       operationId: getMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -261,7 +261,7 @@ paths:
       summary: Modifier un menu
       operationId: updateMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -291,7 +291,7 @@ paths:
       summary: Supprimer un menu
       operationId: deleteMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -410,7 +410,7 @@ paths:
       description: Modifie une recette via son identifiant
       operationId: updateRecipe
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -432,7 +432,7 @@ paths:
       description: Supprimer une recette via son identifiant
       operationId: deleteRecipe
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -602,7 +602,7 @@ paths:
       description: Récupère un repas donné via son identifiant
       operationId: getMeal
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -622,7 +622,7 @@ paths:
       description: Modifie un repas via son identifiant
       operationId: updateMeal
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -650,7 +650,7 @@ paths:
       description: Supprimer un repas via son identifiant
       operationId: deleteMeal
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -1147,7 +1147,7 @@ components:
       properties:
         status: { type: string, const: success }
         data: { $ref: "#/components/schemas/MenuDetail" }
-        
+
     Ingredient:
       type: object
       properties:
@@ -1201,7 +1201,7 @@ components:
 
     IngredientDetail:
       allOf:
-        - $ref: '#/components/schemas/Ingredient'
+        - $ref: "#/components/schemas/Ingredient"
         - type: object
           properties:
             minerals:
@@ -1285,7 +1285,7 @@ components:
               vitaminType:
                 type: string
               value:
-                type: number 
+                type: number
 
   responses:
     BadRequest:
