add: format to eslint standart

--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -28,7 +28,7 @@ paths:
       summary: Récupérer les menus
       operationId: listMenus
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: limit
           in: query
@@ -60,7 +60,7 @@ paths:
       summary: Sauvegarder/Créer un menu
       operationId: createMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       requestBody:
         required: true
         content:
@@ -96,7 +96,7 @@ paths:
       description: Génère un menu (plusieurs repas sur plusieurs jours) avec critères nutritionnels Min/Max
       operationId: generateMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: duration
           description: Nombre de jours sur lesquels s'étale le menu
@@ -164,7 +164,7 @@ paths:
       summary: Détails d'un menu
       operationId: getMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -183,7 +183,7 @@ paths:
       summary: Modifier un menu
       operationId: updateMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -213,7 +213,7 @@ paths:
       summary: Supprimer un menu
       operationId: deleteMenu
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -332,7 +332,7 @@ paths:
       description: Modifie une recette via son identifiant
       operationId: updateRecipe
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -354,7 +354,7 @@ paths:
       description: Supprimer une recette via son identifiant
       operationId: deleteRecipe
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -524,7 +524,7 @@ paths:
       description: Récupère un repas donné via son identifiant
       operationId: getMeal
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -544,7 +544,7 @@ paths:
       description: Modifie un repas via son identifiant
       operationId: updateMeal
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -572,7 +572,7 @@ paths:
       description: Supprimer un repas via son identifiant
       operationId: deleteMeal
       security:
-        - ApiKeyAuth: [ ]
+        - ApiKeyAuth: []
       parameters:
         - name: id
           in: path
@@ -1069,7 +1069,7 @@ components:
       properties:
         status: { type: string, const: success }
         data: { $ref: "#/components/schemas/MenuDetail" }
-        
+
     Ingredient:
       type: object
       properties:
@@ -1123,7 +1123,7 @@ components:
 
     IngredientDetail:
       allOf:
-        - $ref: '#/components/schemas/Ingredient'
+        - $ref: "#/components/schemas/Ingredient"
         - type: object
           properties:
             minerals:
@@ -1207,7 +1207,7 @@ components:
               vitaminType:
                 type: string
               value:
-                type: number 
+                type: number
 
   responses:
     BadRequest:
