--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "lint": "eslint . && prettier --check .",
     "lint:fix": "eslint . --fix && prettier --write .",
     "format": "prettier --write .",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check .",
+    "test:run": "vitest --run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@openrouter/ai-sdk-provider": "^1.2.3",
@@ -36,13 +39,15 @@
     "@types/http-errors": "^2.0.5",
     "@types/node": "^24.9.1",
     "@types/swagger-ui-express": "^4.1.8",
+    "@vitest/ui": "4.0.11",
     "eslint": "^9.39.1",
     "globals": "^16.5.0",
     "prettier": "3.6.2",
     "prisma": "^6.18.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.47.0"
+    "typescript-eslint": "^8.47.0",
+    "vitest": "^4.0.11"
   },
   "private": true
 }
